pihole-istio-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  ingressClassName: istio
  rules:
  - host: pihole.donthurt.us
    http:
      paths:
      - backend:
          service:
            name: pihole-tcp
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pihole.donthurt.us
    secretName: pihole-tls
